--- a/.github/workflows/compile-c.yml
+++ b/.github/workflows/compile-c.yml
@@ -30,8 +30,11 @@ jobs:
             - "emulator/**"
 
     - name: make disassembler
-      # if: steps.changes.outputs.disassembler == 'true'
+      if: ${{ steps.changes.outputs.disassembler == 'true' }}
       run: make disassembler
-    - name: make 8080emulator
-      # if: steps.changes.outputs.emulator == 'true'
-      run: make 8080emulator
+    - name: make emulator
+      if: ${{ steps.changes.outputs.emulator == 'true' }}
+      run: make emulator
+    - name: make emu_debug
+      if: ${{ steps.changes.outputs.emulator == 'true' || steps.changes.outputs.disassembler == 'true' }}
+      run: make emu_debug
