--- a/.github/workflows/compile-c.yml
+++ b/.github/workflows/compile-c.yml
@@ -10,8 +10,7 @@ on:
 
 defaults:
   run:
-    shell: pwsh
-    working-directory: build
+    shell: msys2 {0}
 
 jobs:
   build:
@@ -19,6 +18,12 @@ jobs:
     runs-on: windows-latest
 
     steps:
+    - uses: msys2/setup-msys2@v2
+      with:
+        update: true
+        install: >-
+          base-devel
+          mingw-w64-x86_64-SDL2
     - uses: actions/checkout@v3
     - uses: dorny/paths-filter@v2
       id: changes
@@ -28,15 +33,27 @@ jobs:
             - "disassembler/**"
           emulator:
             - "emulator/**"
+          machine:
+            - "machine/**"
+          main:
+            - main.cpp
 
     - name: make disassembler
       if: ${{ steps.changes.outputs.disassembler == 'true' }}
       run: make disassembler
+      working-directory: disassembler
 
     - name: make emulator
       if: ${{ steps.changes.outputs.emulator == 'true' }}
       run: make emulator
+      working-directory: emulator
 
     - name: make emulator_debug
       if: ${{ steps.changes.outputs.emulator == 'true' || steps.changes.outputs.disassembler == 'true' }}
       run: make emulator_debug
+      working-directory: emulator
+
+    - name: make main
+      if: ${{ steps.changes.outputs.emulator == 'true' || steps.changes.outputs.machine == 'true' || steps.changes.outputs.main == 'true' }}
+      run: make main
+      working-directory: ${GITHUB_WORKSPACE}
