--- a/.github/workflows/compile-c.yml
+++ b/.github/workflows/compile-c.yml
@@ -38,8 +38,8 @@ jobs:
             - "machine/**"
           main:
             - main.cpp
-    - name: setup environment
-      run: echo "D:\a\_temp\msys64\mingw64\bin" >> $GITHUB_PATH
+    - name: Put MSYS2_MinGW64 on PATH
+      run: echo "{{ runner.temp }}/msys64/mingw64/bin" | Out-File -FilePath $env:GITHUB_PATH -Encoding utf8 -Append
 
     - name: make disassembler
       if: ${{ steps.changes.outputs.disassembler == 'true' }}
