remove working-directory, cd instead

--- a/.github/workflows/compile-c.yml
+++ b/.github/workflows/compile-c.yml
@@ -18,6 +18,7 @@ jobs:
     runs-on: windows-latest
 
     steps:
+
     - uses: msys2/setup-msys2@v2
       with:
         release: false
@@ -26,7 +27,9 @@ jobs:
         install: >-
           base-devel
           mingw-w64-x86_64-SDL2
+
     - uses: actions/checkout@v3
+
     - uses: dorny/paths-filter@v2
       id: changes
       with:
@@ -38,27 +41,26 @@ jobs:
           machine:
             - "machine/**"
           main:
-            - main.cpp
-    - name: Put MSYS2_MinGW64 on PATH
-      run: echo "{{ runner.temp }}/msys64/mingw64/bin" | Out-File -FilePath $env:GITHUB_PATH -Encoding utf8 -Append
-      shell: pwsh
+            - "main.cpp"
 
     - name: make disassembler
       if: ${{ steps.changes.outputs.disassembler == 'true' }}
-      run: make disassembler
-      working-directory: disassembler
+      run: |
+        cd disassembler
+        make disassembler
 
     - name: make emulator
       if: ${{ steps.changes.outputs.emulator == 'true' }}
-      run: make emulator
-      working-directory: emulator
+      run: |
+        cd emulator
+        make emulator
 
     - name: make emulator_debug
       if: ${{ steps.changes.outputs.emulator == 'true' || steps.changes.outputs.disassembler == 'true' }}
-      run: make emulator_debug
-      working-directory: emulator
+      run: |
+        cd emulator
+        make emulator_debug
 
     - name: make main
       if: ${{ steps.changes.outputs.emulator == 'true' || steps.changes.outputs.machine == 'true' || steps.changes.outputs.main == 'true' }}
       run: make main
-      working-directory: ${GITHUB_WORKSPACE}
