--- a/.github/workflows/compile-c.yml
+++ b/.github/workflows/compile-c.yml
@@ -43,15 +43,15 @@ jobs:
           main:
             - "main.cpp"
 
-    # - name: Put MSYS2_MinGW64 on PATH
-    #   run: echo "{{ runner.temp }}/msys64/mingw64/bin" | Out-File -FilePath $env:GITHUB_PATH -Encoding utf8 -Append
-    #   shell: pwsh
+    - name: Put MSYS2_MinGW64 on PATH
+      run: echo "{{ runner.temp }}/msys64/mingw64/bin" | Out-File -FilePath $env:GITHUB_PATH -Encoding utf8 -Append
+      shell: pwsh
 
     - name: make disassembler
       if: ${{ steps.changes.outputs.disassembler == 'true' }}
       run: |
         cd disassembler
-        ls
+        gcc --version
         make disassembler
 
     - name: make emulator
