--- a/.github/workflows/compile-c.yml
+++ b/.github/workflows/compile-c.yml
@@ -44,7 +44,7 @@ jobs:
             - "main.cpp"
 
     - name: Put MSYS2_MinGW64 on PATH
-      run: echo "{{ runner.temp }}/msys64/mingw64/bin" | Out-File -FilePath $env:GITHUB_PATH -Encoding utf8 -Append
+      run: echo "${{ runner.temp }}/msys64/mingw64/bin" | Out-File -FilePath $env:GITHUB_PATH -Encoding utf8 -Append
       shell: pwsh
 
     - name: make disassembler
