--- a/.github/workflows/compile-c.yml
+++ b/.github/workflows/compile-c.yml
@@ -21,9 +21,9 @@ jobs:
 
     - uses: msys2/setup-msys2@v2
       with:
-        release: false
-        msystem: MSYS
+        release: true
         update: true
+        msystem: MSYS
         install: >-
           base-devel
           mingw-w64-x86_64-SDL2
@@ -44,7 +44,7 @@ jobs:
             - "main.cpp"
 
     - name: Put MSYS2_MinGW64 on PATH
-      run: echo "${{ runner.temp }}/msys64/mingw64/bin" | Out-File -FilePath $env:GITHUB_PATH -Encoding utf8 -Append
+      run: echo "${{ runner.temp }}\msys64\mingw64\bin" | Out-File -FilePath $env:GITHUB_PATH -Encoding utf8 -Append
       shell: pwsh
 
     - name: make disassembler
