--- a/.github/workflows/compile-c.yml
+++ b/.github/workflows/compile-c.yml
@@ -47,6 +47,11 @@ jobs:
       run: echo "${{ runner.temp }}\msys64\mingw64\bin" | Out-File -FilePath $env:GITHUB_PATH -Encoding utf8 -Append
       shell: pwsh
 
+    - name: check env vars
+      run: |
+        echo $GITHUB_PATH
+        ls "${{runner.temp}}/msys64/mingw64/bin"
+
     - name: make disassembler
       if: ${{ steps.changes.outputs.disassembler == 'true' }}
       run: |
