--- a/.github/workflows/compile-c.yml
+++ b/.github/workflows/compile-c.yml
@@ -26,6 +26,7 @@ jobs:
         msystem: MSYS
         install: >-
           base-devel
+          mingw-w64-x86_64-toolchain
           mingw-w64-x86_64-SDL2
 
     - uses: actions/checkout@v3
@@ -49,7 +50,7 @@ jobs:
 
     - name: check env vars
       run: |
-        echo $GITHUB_PATH
+        cat $GITHUB_PATH
         ls "${{runner.temp}}/msys64/mingw64/bin"
 
     - name: make disassembler
