--- a/.github/workflows/compile-c.yml
+++ b/.github/workflows/compile-c.yml
@@ -43,40 +43,33 @@ jobs:
           main:
             - "main.cpp"
 
-    - name: Put MSYS2_MinGW64 on PATH
-      run: echo "${{ runner.temp }}\msys64\mingw64\bin" | Out-File -FilePath $env:GITHUB_PATH -Encoding utf8 -Append
-      shell: pwsh
+    # - name: Put MSYS2_MinGW64 on PATH
+    #   run: echo "${{ runner.temp }}/msys64/mingw64/bin" | Out-File -FilePath $env:GITHUB_PATH -Encoding utf8 -Append
+    #   shell: pwsh
 
-    - name: check env vars
+    - name: check path
+      run: echo $PATH
+
+    - name: check gcc version
       continue-on-error: true
       run: |
-        env
+        ${{runner.temp}}/msys64/mingw64/bin/gcc --version
         g++ --version
-
-    - name: check github_path
-      run: cat $GITHUB_PATH
-
-    - name: check mingw64 bin
-      run: ls "${{runner.temp}}/msys64/mingw64/bin"
 
     - name: make disassembler
       if: ${{ steps.changes.outputs.disassembler == 'true' }}
-      run: |
-        cd disassembler
-        gcc --version
-        make disassembler
+      run: make disassembler
+      working-directory: disassembler
 
     - name: make emulator
       if: ${{ steps.changes.outputs.emulator == 'true' }}
-      run: |
-        cd emulator
-        make emulator
+      run: make emulator
+      working-directory: emulator
 
     - name: make emulator_debug
       if: ${{ steps.changes.outputs.emulator == 'true' || steps.changes.outputs.disassembler == 'true' }}
-      run: |
-        cd emulator
-        make emulator_debug
+      run: make emulator_debug
+      working-directory: emulator
 
     - name: make main
       if: ${{ steps.changes.outputs.emulator == 'true' || steps.changes.outputs.machine == 'true' || steps.changes.outputs.main == 'true' }}
