--- a/.github/workflows/compile-c.yml
+++ b/.github/workflows/compile-c.yml
@@ -43,12 +43,17 @@ jobs:
           main:
             - "main.cpp"
 
-    # - name: Put MSYS2_MinGW64 on PATH
-    #   run: echo "${{ runner.temp }}/msys64/mingw64/bin" | Out-File -FilePath $env:GITHUB_PATH -Encoding utf8 -Append
-    #   shell: pwsh
+    - name: Put MSYS2_MinGW64 on PATH
+      run: echo "${{ runner.temp }}\msys64\mingw64\bin" | Out-File -FilePath $env:GITHUB_PATH -Encoding utf8 -Append
+      shell: pwsh
 
     - name: check path
       run: echo $PATH
+
+    - name: check GITHUB_PATH location and contents
+      run: |
+        echo $GITHUB_PATH
+        cat $GITHUB_PATH
 
     - name: check gcc version
       continue-on-error: true
