--- a/.github/workflows/compile-c.yml
+++ b/.github/workflows/compile-c.yml
@@ -26,6 +26,7 @@ jobs:
           base-devel
           mingw-w64-x86_64-toolchain
           mingw-w64-x86_64-SDL2
+          mingw-w64-x86_64-SDL2_mixer
 
     - uses: actions/checkout@v3
 
