temporarily edit workflow file

--- a/.github/workflows/compile-c.yml
+++ b/.github/workflows/compile-c.yml
@@ -2,7 +2,7 @@ name: C Compiler Error-Check
 
 on:
   push:
-    branches: [ "main" ]
+    branches: [ "main", "name-changes" ]
   pull_request:
     branches: [ "main" ]
 
