--- a/.github/workflows/compile-c.yml
+++ b/.github/workflows/compile-c.yml
@@ -40,7 +40,7 @@ jobs:
             - "emulator/**"
           machine:
             - "machine/**"
-          invaders:
+          main:
             - "main.cpp"
 
     - name: Put MSYS2_MinGW64 on PATH
@@ -62,6 +62,6 @@ jobs:
       run: make emulator_debug
       working-directory: emulator
 
-    - name: make invaders
-      if: ${{ steps.changes.outputs.emulator == 'true' || steps.changes.outputs.machine == 'true' || steps.changes.outputs.invaders == 'true' }}
-      run: make invaders
+    - name: make main
+      if: ${{ steps.changes.outputs.emulator == 'true' || steps.changes.outputs.machine == 'true' || steps.changes.outputs.main == 'true' }}
+      run: make main
